--- a/w05/d03/starter/trailer/app/views/movies/show.html.erb
+++ b/w05/d03/starter/trailer/app/views/movies/show.html.erb
@@ -1,6 +1,7 @@
 <%= @movie.title %>
 <br>
-<img src="<%= @movie.poster_url %>">
+<iframe id="ytplayer" type="text/html" width="640" height="390"
+  src="<%= @movie.poster_url %>" frameborder="0"/>
 <br>
 <%= link_to "Delete", movie_path(@movie), method: :delete %>
 
